--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
                 { id: 13, name: 'Domicilios', icon: '🛵', color: '#DAA520', budget: 200000 },
                 { id: 14, name: 'Educacion', icon: '📚', color: '#B8860B', budget: 300000 },
                 { id: 15, name: 'Inversiones', icon: '📈', color: '#CFB53B', budget: 500000 },
-                { id: 16, name: 'Gastos de pareja', icon: '💑', color: '#D4AF37', budget: 250000 }
+                { id: 16, name: 'Gastos de pareja', icon: '💑', color: '#D4AF37', budget: 250000 },
+                { id: 17, name: 'Deudas', icon: '💳', color: '#8B4513', budget: 400000 }
             ]);
             
             const [showForm, setShowForm] = useState(false);
